# ubackup

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING.rst  INSTALL  Makefile  Makefile.am  README  README.rst  archive.sh  configure  configure.ac  configure.conf.sample  dist  run_tests  ubtc.c  ubtc.yog  ubts.c  ubts.yog
doc/: index.html
include/ubackup/: config.h.in
issues/: issue-34eb05e70d32de8e9aa61addabd5b5499a12f63e.yaml  project.yaml
share/ubackup/: CMakeLists.txt  ubackup.sh
src/: CMakeLists.txt  ubackupee.c  ubackuper.c  ubackupme  ubackupme.c  ubackupyou  ubackupyou.c
tests/: CMakeLists.txt  center.c  lib  test_backup_name  test_changed  test_dir  test_dir_meta  test_file_body  test_first_backup  test_ignore_dot_meta  test_meta  test_meta2  test_meta3  test_name  test_remove_old  test_remove_old2  test_stat  test_symlink  test_symlink2  test_too_long_filename  test_unchanged  test_unchanged2  test_unchanged3
